Add Requirements sketch

--- a/verslag.tex
+++ b/verslag.tex
@@ -33,7 +33,23 @@ Zie hier een referentie naar Royce~\cite{royce1987managing} en nog een naar Clar
 \section{Requirements}
 
 \subsection{Requirements}
+\begin{description}
+\item [Requirement 1] Afmetingen van de schutsluis moeten zodanig groot zijn dat de grootste schip dat nu of in de toekomst
+gebruik maakt van de vaarweg de sluis kan paseren.
+\item [Requirement 2] De capaciteit schutsluis zodat tijdsverlies wordt voorkomen doort maximaal aantal schepen dat
+per tijdseenheid kan worden geschut.
+\item [Requirement 3] Ook bij kleinere schepen tijdsverslies moet gewoon toi zijn minimum worden gebracht biij mogelijke vaarweg met grote
+scheepvaartintensiteit.
+\item [Requirement 4] Op elke moment moeten schippers/schepen door middel van een lichtsignaal de beschikbaarheid van de gebruik
+van de schutsluit kunnen zien.
+\item [Requirement 5] Ten alle tijden dient een schip die gebestigd is in een schutkolk uitsluitend met gesloten sluisdeuren van het
+ene naar het ander water niveau te worden gebracht.
+\item [Requirement 6] Indien sluisdeuren aan één kant in de open toestand zich bevinden zonder dat er een schip
+in de schutkolk aanwezig is dient een lichtsignaal aan die kant te worden afgegeven dat aangeeft dat de schutsluis beschikbaar is voor gebruik.
+\item [Requirement 7] Indien sluisdeuren in de gesloten toestand zich bevinden of in de open toestand waarbij een schip nog
+aanwezig is in de schutkolk dient een lichtsignaal te worden afgegeven dat aangeeft dat de schutsluit niet beschikbaar is voor gebruik.
 
+\newpage
 \subsection{specificaties}
 
 \subsection{Het vier variabelen model}
