--- a/Latex/verslag.tex
+++ b/Latex/verslag.tex
@@ -30,7 +30,13 @@
 \newpage
 \section{Inleiding}
 Zie hier een referentie naar Royce~\cite{royce1987managing} en nog een naar Clarke~\cite{modelchecking}\ldots 
-\section{Requirements}
+
+\subsection{Sketch}
+\item [Veiligheid] ..
+\item [Capaciteit] ..
+\item [Beschikbaar] ..
+\item [Efficienty] ..
+\item [..]
 
 \subsection{Requirements}
 \begin{description}
