Add bron and update with keywords

--- a/Latex/verslag.tex
+++ b/Latex/verslag.tex
@@ -32,12 +32,13 @@
 Zie hier een referentie naar Royce~\cite{royce1987managing} en nog een naar Clarke~\cite{modelchecking}\ldots 
 
 \subsection{Sketch}
-\item [Veiligheid] ..
-\item [Capaciteit] ..
-\item [Beschikbaar] ..
-\item [Efficienty] ..
-\item [..]
+Veiligheid \\
+Capaciteit \\
+Beschikbaarheid \\
+Efficientie \\
+.. \\
 
+\newpage
 \subsection{Requirements}
 \begin{description}
 \item [Requirement 1] Afmetingen van de schutsluis moeten zodanig groot zijn dat de grootste schip dat nu of in de toekomst
@@ -54,6 +55,7 @@ ene naar het ander water niveau te worden gebracht.
 in de schutkolk aanwezig is dient een lichtsignaal aan die kant te worden afgegeven dat aangeeft dat de schutsluis beschikbaar is voor gebruik.
 \item [Requirement 7] Indien sluisdeuren in de gesloten toestand zich bevinden of in de open toestand waarbij een schip nog
 aanwezig is in de schutkolk dient een lichtsignaal te worden afgegeven dat aangeeft dat de schutsluit niet beschikbaar is voor gebruik.
+\end{description}
 
 \newpage
 \subsection{specificaties}
