--- a/Latex/verslag.tex
+++ b/Latex/verslag.tex
@@ -6,18 +6,18 @@
 \begin{titlepage}
   \centering
     \vfill
-    {\bfseries\Huge
-      Verslag Tinlab Advanced Algorithms \\
+    {
+        \bfseries\Huge Verslag Tinlab Advanced Algorithms \\
         \vskip2cm
-      }
-      {\bfseries\Large
-        S. T. Udent\\
-      }
-      {
-        \bfseries\normalsize
-        176-671\\
-        \vskip1cm
-        \today\\
+        }
+        {\bfseries\Large
+          R. Karajev (0851997), M. Steijger (0938713)\\
+        }
+        {
+          \bfseries\normalsize
+          0851997, 0938713\\
+          \vskip1cm
+          \today\\
     }    
     \vfill
     \includegraphics[width=4cm]{logohr.png} % also works with logo.pdf
