Update document "eindverslag" with requirements

--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -17,49 +17,16 @@ misc{ieee-write,
 	Lastchecked = {18/04/2017},
 	Title = {How to Write for Technical Periodicals \& Conferences}}
 
-
-
-@article{schon2017agile,
-  title={Agile Requirements Engineering: A systematic literature review},
-  author={Sch\"on, Eva-Maria and Thomaschewski, J\"org and Escalona, Maria Jose},
-  journal={Computer Standards \& Interfaces},
-  volume={49},
-  pages={79--91},
-  year={2017},
-  publisher={Elsevier}
+@article{functioneel,
+  title={Algemene elektrotechnische voorschriften Bruggen en Sluizen},
+  author={R.J de Vries},
+  year={2014},
+  publisher = {Provincie Overijssel},
 }
 
-@inproceedings{royce1987managing,
-  title={Managing the development of large software systems: concepts and techniques},
-  author={Royce, Winston W},
-  booktitle={Proceedings of the 9th international conference on Software Engineering},
-  pages={328--338},
-  year=1987,
-  organization={IEEE Computer Society Press}
+@article{bedienininstructie,
+  title={Julianasluis 2 Bedienininstructie},
+  year={2014},
+  publisher = {Pilz Nederland},
 }
 
-@article{leveson1993investigation,
-  title={An investigation of the Therac-25 accidents},
-  author={Leveson, Nancy G and Turner, Clark S},
-  journal={IEEE computer},
-  volume={26},
-  number={7},
-  pages={18--41},
-  year={1993}
-}
-@book{modelchecking,
- author = {Clarke,Jr., Edmund M. and Grumberg, Orna and Peled, Doron A.},
- title = {Model Checking},
- year = {1999},
- isbn = {0-262-03270-8},
- publisher = {MIT Press},
- address = {Cambridge, MA, USA},
-}
-@inproceedings{nuseibeh2000requirements,
-  title={Requirements engineering: a roadmap},
-  author={Nuseibeh, Bashar and Easterbrook, Steve},
-  booktitle={Proceedings of the Conference on the Future of Software Engineering},
-  pages={35--46},
-  year={2000},
-  organization={ACM}
-}
