Update 'eindverslag' to complete document

--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -30,3 +30,21 @@ misc{ieee-write,
   publisher = {Pilz Nederland},
 }
 
+@book{modelchecking,
+ author = {Clarke,Jr., Edmund M. and Grumberg, Orna and Peled, Doron A.},
+ title = {Model Checking},
+ year = {1999},
+ isbn = {0-262-03270-8},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
+
+@book{ontwerpSchutsluizen,
+ author = {Vrijburcht, A.},
+ title = {Ontwerpen van schutsluizen},
+ year = {2000},
+ isbn = {90-369-3305-6},
+ publisher = {Rijskwaterstaat Bouwdienst},
+}
+
+
