--- a/Latex/verslag.tex
+++ b/Latex/verslag.tex
@@ -283,22 +283,22 @@ in hoofdstuk \textit{Specificaties} doorgelopen wordt.
             Requirements & Geverifieeerd & Formule \\
         \hline
         \hline
-            Sluisdeuren 1 (veiligheig)                      &           \leavevmode\color[HTML]{32CD32} PASS          &         E$<>$ not (D9.Open and D0.Open))        \\ \hline
-            Sluisdeuren 2 (veiligheid / bereikbaarheid)     &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ not (H1.Open and L1.x>=level\_timer) and D1.Closed \\ 
+            Sluisdeuren 1 (veiligheig)                      &           \leavevmode\color[HTML]{32CD32} PASSED          &         E$<>$ not (D9.Open and D0.Open))        \\ \hline
+            Sluisdeuren 2 (veiligheid / bereikbaarheid)     &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ not (H1.Open and L1.x>=level\_timer) and D1.Closed \\ 
             &&A$<>$ not (H0.Open and L1.x>=level\_timer) and D0.Closed       \\ \hline
-            Sluisdeuren 3 (veiligheid)                      &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ not ((D0.Opening or D0.Closing) and S0.Green)        \\ \hline
-            Sluisdeuren 4 (veiligheid)                      &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ (H0.Open and L1.x<=level\_timer) imply (D0.Closed and D1.Closed and S0.Red and S1.Red)        \\ \hline
-            Ricketschuiven 1 (veiligheid)                   &           \leavevmode\color[HTML]{32CD32} PASS          &         E$<>$ not (H0.Open and H1.Open)        \\ \hline
-            Ricketschuiven 2 (veiligheid)                   &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ (H0.Open imply not D1.Open) and (H1.Open imply not D0.Open)        \\ \hline
-            Scheepvaartseinen 1 (veiligheid)                &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ (S0.Green imply not S1.Green) and (S1.Green imply S0.Green)        \\ \hline
-            Scheepvaartseinen 2 (veiligheid)                &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ (S0.Green imply (not (D0.Opening or D0.Closed or D0.Closing)))        \\ \hline
-            Noodstop 1 (veiligheid / fairness)              &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ Emergency.Ready        \\ \hline
-            Noodstop 2 (veiligheid)                         &           \leavevmode\color[HTML]{FF0000} FAIL          &         -        \\ \hline
-            Noodstop 3 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASS          &         Noodstop 1        \\ \hline
-            Noodstop 4 (veiligheid)                         &           \leavevmode\color[HTML]{FF0000} PASS          &         Test        \\ \hline
-            Noodstop 5 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ Emergency.Stopped imply (H0.Closing or H0.Closed)        \\ \hline
-            Noodstop 6 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ Emergency.Ready imply (H0.Closed and H1.Closed)        \\ \hline
-            Noodstop 7 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASS          &         A$<>$ Emergency.Stopped imply (S1.Red\_Red and S0.Red\_Red)\\
+            Sluisdeuren 3 (veiligheid)                      &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ not ((D0.Opening or D0.Closing) and S0.Green)        \\ \hline
+            Sluisdeuren 4 (veiligheid)                      &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ (H0.Open and L1.x<=level\_timer) imply (D0.Closed and D1.Closed and S0.Red and S1.Red)        \\ \hline
+            Ricketschuiven 1 (veiligheid)                   &           \leavevmode\color[HTML]{32CD32} PASSED          &         E$<>$ not (H0.Open and H1.Open)        \\ \hline
+            Ricketschuiven 2 (veiligheid)                   &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ (H0.Open imply not D1.Open) and (H1.Open imply not D0.Open)        \\ \hline
+            Scheepvaartseinen 1 (veiligheid)                &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ (S0.Green imply not S1.Green) and (S1.Green imply S0.Green)        \\ \hline
+            Scheepvaartseinen 2 (veiligheid)                &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ (S0.Green imply (not (D0.Opening or D0.Closed or D0.Closing)))        \\ \hline
+            Noodstop 1 (veiligheid / fairness)              &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ Emergency.Ready        \\ \hline
+            Noodstop 2 (veiligheid)                         &           \leavevmode\color[HTML]{FF0000} FAILED          &         -        \\ \hline
+            Noodstop 3 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASSED          &         Noodstop 1        \\ \hline
+            Noodstop 4 (veiligheid)                         &           \leavevmode\color[HTML]{FF0000} FAILED          &         -        \\ \hline
+            Noodstop 5 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ Emergency.Stopped imply (H0.Closing or H0.Closed)        \\ \hline
+            Noodstop 6 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ Emergency.Ready imply (H0.Closed and H1.Closed)        \\ \hline
+            Noodstop 7 (veiligheid)                         &           \leavevmode\color[HTML]{32CD32} PASSED          &         A$<>$ Emergency.Stopped imply (S1.Red\_Red and S0.Red\_Red)\\
             % 1 (efficientie)                     &           \leavevmode\color[HTML]{FF0000} PASS          &         Test        \\ \hline
             % 2 (efficientie)                     &           \leavevmode\color[HTML]{FF0000} PASS          &         Test        \\ \hline
         \hline
