Add pictures for 'Gemodeleerde onderdelen'

--- a/Latex/verslag.tex
+++ b/Latex/verslag.tex
@@ -238,15 +238,18 @@
 \newpage
 \section {Gemodelleerde onderdelen}
     De schutsluis model wordt een simplistische model van Julianasluis 2. Deze model
-    wordt opgebouwd uit volgende onderdelen:
+    wordt opgebouwd uit volgende onderdelen: \\
 
-    \begin{itemize}
-        \item 2x sluisdeur onderdeel
-        \item 1x scheepvaartsein onderdeel per sluisdeur onderdeel
-        \item 1x ricketschuif onderdeel per sluisdeur onderdeel
-        \item 1x noodstop onderdeel
-        \item 1x logische uitwerking
-    \end{itemize}
+    \noindent Sluisdeur \\\\
+    \noindent\makebox[\textwidth]{\includegraphics[width=10cm]{door.png}} \\
+    \\ Scheepvaartsein \\
+    \noindent\makebox[\textwidth]{\includegraphics[width=10cm]{sein.png}} \\
+    
+    \newpage
+    \noindent Ricketschuif \\\\
+    \noindent\makebox[\textwidth]{\includegraphics[width=15cm]{schuif.png}} \\
+    \\ Noodstop \\\\
+    \noindent\makebox[\textwidth]{\includegraphics[width=6cm]{noodstop.png}} \\
 
 
 %----------------------------------------------------------------------------------
